frontik (2.8.0~dev) UNRELEASED; urgency=low

  [ Ivan Fedorov ]
  * New development version

  [ Andrew Sumin ]
  * If we have 500 but have "noxsl" in args without "debug" in args apply xsl for debug info anyway. Fixed

 -- Andrew Sumin <AndrewSumin@gmail.com>  Fri, 03 Dec 2010 15:54:58 +0300

frontik (2.7.1) unstable; urgency=low

  * bugfix HH-12382

 -- Mike Sub <m.saburenkov@hh.ru>  Tue, 30 Nov 2010 15:01:09 +0300

frontik (2.7.0) unstable; urgency=low

  * add put,delete methods to handler

 -- Mike Sub <m.saburenkov@hh.ru>  Tue, 30 Nov 2010 14:43:26 +0300

frontik (2.6.4) unstable; urgency=low

  * Bugfix fot get_url_retry

 -- Andrew Sumin <AndrewSumin@gmail.com>  Sun, 14 Nov 2010 12:40:01 +0300

frontik (2.6.3) unstable; urgency=low

  * UI fix, now support debug=@__text__ for highlight

 -- Andrew Sumin <AndrewSumin@gmail.com>  Sat, 13 Nov 2010 15:25:46 +0300

frontik (2.6.2) unstable; urgency=low

  * put back tornado.options.options.debug
  * some UI improvement

 -- Andrew Sumin <AndrewSumin@gmail.com>  Thu, 11 Nov 2010 17:03:02 +0300

frontik (2.6.1) unstable; urgency=low

  * unicode query params
  * remove check "debug mode" from config, we check it in require_debug_access

 -- Andrew Sumin <AndrewSumin@gmail.com>  Thu, 11 Nov 2010 14:06:04 +0300

frontik (2.6.0) unstable; urgency=low

  * Now frontik has awesome debug HH-15291

 -- Andrew Sumin <AndrewSumin@gmail.com>  Sun, 07 Nov 2010 20:23:22 +0300

frontik (2.5.0) unstable; urgency=low

  * HH-16589 implemented HEAD = GET w/o body

 -- Pavel Trukhanov <p.trukhanov@hh.ru>  Tue, 09 Nov 2010 19:19:37 +0300

frontik (2.4.2) unstable; urgency=low

  * HH-16103 fixed

 -- Pavel Trukhanov <p.trukhanov@hh.ru>  Wed, 27 Oct 2010 21:19:14 +0400

frontik (2.4.1) unstable; urgency=low

  * production config reverted

 -- Pavel Trukhanov <p.trukhanov@hh.ru>  Wed, 27 Oct 2010 13:30:10 +0400

frontik (2.4.0) unstable; urgency=low

  * threaded jobs added, and threaded xslt impl
